[package]
name = "token_parser"
version = "1.3.0"
edition = "2021"
repository = "https://github.com/vrrashkov/TokenParser"
readme = "README.md"
description = "Figma studio token parser. Convert your tokens to usable code in any language."
keywords = ["figma", "tokens", "design-tokens"]

[dependencies]
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
convert_case = "0.6.0"
json_comments = "0.2.1"
serde-this-or-that = "0.4.2"
clap = "4.2.7"
serde_yaml = "0.9.21"
evalexpr = "9.1.0"
json_value_merge = "1.1.2"
easy_color = "0.1.11"
liquid = "0.26.2"
liquid-core = "0.26.2"
anyhow = "1.0.71"
